--- a/notebooks/kerr_derivatives.ipynb
+++ b/notebooks/kerr_derivatives.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,260 +313,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 1.0$"
-      ],
-      "text/plain": [
-       "1.00000000000000"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle -0.124750125$"
-      ],
-      "text/plain": [
-       "-0.124750125000000"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 6.0$"
-      ],
-      "text/plain": [
-       "6.00000000000000"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 7.94835391258203$"
-      ],
-      "text/plain": [
-       "7.94835391258203"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0.0777082205077212$"
-      ],
-      "text/plain": [
-       "0.0777082205077212"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle -0.0223651699234765$"
-      ],
-      "text/plain": [
-       "-0.0223651699234765"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle -0.999$"
-      ],
-      "text/plain": [
-       "-0.999000000000000"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 8.0$"
-      ],
-      "text/plain": [
-       "8.00000000000000"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle -3.33444400760206$"
-      ],
-      "text/plain": [
-       "-3.33444400760206"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle -115.10010627914$"
-      ],
-      "text/plain": [
-       "-115.100106279140"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, r/sqrt(a**2*cos(theta) + r**2), -a**2*sin(theta)/(2*sqrt(a**2*cos(theta) + r**2))), (0, 2*r - 2, 0), (0, (-a**2*sin(theta)**2*Derivative(Delta(r), r)/2 + 2*r*(a**2 + r**2))/sqrt(-a**2*Delta(r)*sin(theta)**2 + (a**2 + r**2)**2), -Delta*a**2*sin(theta)*cos(theta)/sqrt(-Delta*a**2*sin(theta)**2 + (a**2 + r**2)**2)), (0, sqrt(Delta(r))*Derivative(rho(r), r)/Sigma(r) - sqrt(Delta(r))*rho(r)*Derivative(Sigma(r), r)/Sigma(r)**2 + rho(r)*Derivative(Delta(r), r)/(2*sqrt(Delta(r))*Sigma(r)), sqrt(Delta)*Derivative(rho(theta), theta)/Sigma(theta) - sqrt(Delta)*rho(theta)*Derivative(Sigma(theta), theta)/Sigma(theta)**2), (-a, 2*r, 0), (-Delta*(-2*a + 2*b) + 2*P(b)*Derivative(P(b), b), -(q + (-a + b)**2)*Derivative(Delta(r), r), 0), (-2*b*cos(theta)**2/sin(theta)**2, 0, 2*b**2*cos(theta)**3/sin(theta)**3 + 2*(-a**2 + b**2/sin(theta)**2)*sin(theta)*cos(theta))]\n"
+     ]
     }
    ],
    "source": [
@@ -601,10 +356,49 @@
     "# Dictionary of evaluated partial derivatives\n",
     "partial_values = {}\n",
     "\n",
+    "# Replace partial derivatives with their values\n",
+    "def replace_partials(expression):\n",
+    "    for (old, new) in partial_values.items(): \n",
+    "        expression = expression.replace(old, new)\n",
+    "    return expression\n",
     "\n",
+    "\n",
+    "# Expressions for partial derivatives\n",
     "partials_rho = partials(rho)\n",
+    "partials_Delta = partials(Delta)\n",
+    "partials_Sigma = partials(\n",
+    "    Sigma,\n",
+    "    Sigma.subs(\"Delta\", \"Delta(r)\"),\n",
+    "    Sigma,\n",
+    ")\n",
     "\n",
+    "partials_alpha = partials(\n",
+    "    alpha,\n",
+    "    alpha.subs({\"rho\": \"rho(r)\",\"Delta\": \"Delta(r)\", \"Sigma\": \"Sigma(r)\"}),\n",
+    "    alpha.subs({\"rho\": \"rho(theta)\", \"Sigma\": \"Sigma(theta)\"}),\n",
+    ")\n",
     "\n",
+    "partials_P = partials(P)\n",
+    "partials_R = partials(\n",
+    "    R.subs({\"P\": \"P(b)\"}),\n",
+    "    R.subs({\"Delta\": \"Delta(r)\"}),\n",
+    "    R,\n",
+    ")\n",
+    "partials_Theta = partials(\n",
+    "    Theta\n",
+    ")\n",
+    "\n",
+    "print([\n",
+    "        partials_rho,\n",
+    "    partials_Delta,\n",
+    "    partials_Sigma,\n",
+    "    partials_alpha,\n",
+    "    partials_P,\n",
+    "    partials_R,\n",
+    "    partials_Theta,\n",
+    "])\n",
+    "\n",
+    "# Evaluate partial derivatives\n",
     "for (letter, exprs) in [\n",
     "    ('rho', partials_rho),\n",
     "    ('Delta', partials_Delta),\n",
@@ -618,25 +412,16 @@
     "        fn = sp.Function(letter)(x)\n",
     "        dfn = fn.diff(x)\n",
     "\n",
-    "        for (old, new) in partial_values.items(): \n",
-    "            expression= expression.replace(old, new)\n",
-    "        \n",
+    "        expression= replace_partials(expression)\n",
     "        expression = replace_fns(expression, ray)\n",
     "\n",
     "        partial_values[dfn] = eval_on(expression, ray)\n",
-    "\n",
-    "display(*partial_values.values())\n",
-    "\n",
-    "\n",
-    "def replace_partials(expression):\n",
-    "    for (old, new) in partial_values.items(): \n",
-    "        expression= expression.replace(old, new)\n",
-    "    return expression"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +433,7 @@
        "-0.749464103268070"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -661,7 +446,7 @@
        "0.249849116429361"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -674,7 +459,7 @@
        "-0.0115805027402825"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -687,7 +472,7 @@
        "-0.666010125374639"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -700,7 +485,7 @@
        "5.20417042793042e-17"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,13 +508,12 @@
     "subs_partial(d_theta)\n",
     "subs_partial(d_phi)\n",
     "subs_partial(d_p_r)\n",
-    "subs_partial(d_p_theta)\n",
-    "\n"
+    "subs_partial(d_p_theta)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +530,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[325], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[39mprint\u001b[39m(i)\n\u001b[1;32m      7\u001b[0m h \u001b[39m=\u001b[39m \u001b[39m0.01\u001b[39m\n\u001b[1;32m      8\u001b[0m new_state \u001b[39m=\u001b[39m (\n\u001b[0;32m----> 9\u001b[0m     (state[\u001b[39m0\u001b[39m] \u001b[39m+\u001b[39m h\u001b[39m*\u001b[39msub_state(d_r, state))\u001b[39m.\u001b[39mevalf(),\n\u001b[1;32m     10\u001b[0m     (state[\u001b[39m1\u001b[39m] \u001b[39m+\u001b[39m h\u001b[39m*\u001b[39msub_state(d_theta, state))\u001b[39m.\u001b[39mevalf(),\n\u001b[1;32m     11\u001b[0m     (state[\u001b[39m2\u001b[39m] \u001b[39m+\u001b[39m h\u001b[39m*\u001b[39msub_state(d_phi, state))\u001b[39m.\u001b[39mevalf(),\n\u001b[1;32m     12\u001b[0m     (state[\u001b[39m3\u001b[39m] \u001b[39m+\u001b[39m h\u001b[39m*\u001b[39msub_state(d_p_r, state))\u001b[39m.\u001b[39mevalf(),\n\u001b[1;32m     13\u001b[0m     (state[\u001b[39m4\u001b[39m] \u001b[39m+\u001b[39m h\u001b[39m*\u001b[39msub_state(d_p_theta, state))\u001b[39m.\u001b[39mevalf(),\n\u001b[1;32m     14\u001b[0m )\n\u001b[1;32m     15\u001b[0m state \u001b[39m=\u001b[39m new_state\n\u001b[1;32m     16\u001b[0m _r\u001b[39m=\u001b[39mstate[\u001b[39m0\u001b[39m]\n",
+      "Cell \u001b[0;32mIn[92], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[39mprint\u001b[39m(i)\n\u001b[1;32m      7\u001b[0m h \u001b[39m=\u001b[39m \u001b[39m0.01\u001b[39m\n\u001b[1;32m      8\u001b[0m new_state \u001b[39m=\u001b[39m (\n\u001b[0;32m----> 9\u001b[0m     (state[\u001b[39m0\u001b[39m] \u001b[39m+\u001b[39m h\u001b[39m*\u001b[39msub_state(d_r, state))\u001b[39m.\u001b[39mevalf(),\n\u001b[1;32m     10\u001b[0m     (state[\u001b[39m1\u001b[39m] \u001b[39m+\u001b[39m h\u001b[39m*\u001b[39msub_state(d_theta, state))\u001b[39m.\u001b[39mevalf(),\n\u001b[1;32m     11\u001b[0m     (state[\u001b[39m2\u001b[39m] \u001b[39m+\u001b[39m h\u001b[39m*\u001b[39msub_state(d_phi, state))\u001b[39m.\u001b[39mevalf(),\n\u001b[1;32m     12\u001b[0m     (state[\u001b[39m3\u001b[39m] \u001b[39m+\u001b[39m h\u001b[39m*\u001b[39msub_state(d_p_r, state))\u001b[39m.\u001b[39mevalf(),\n\u001b[1;32m     13\u001b[0m     (state[\u001b[39m4\u001b[39m] \u001b[39m+\u001b[39m h\u001b[39m*\u001b[39msub_state(d_p_theta, state))\u001b[39m.\u001b[39mevalf(),\n\u001b[1;32m     14\u001b[0m )\n\u001b[1;32m     15\u001b[0m state \u001b[39m=\u001b[39m new_state\n\u001b[1;32m     16\u001b[0m _r\u001b[39m=\u001b[39mstate[\u001b[39m0\u001b[39m]\n",
       "\u001b[0;31mNameError\u001b[0m: name 'state' is not defined"
      ]
     }
