--- a/notebooks/kerr_derivatives.ipynb
+++ b/notebooks/kerr_derivatives.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rho = expr(\"sqrt(r**2 + a**2*cos(theta))\")\n",
+    "rho = expr(\"sqrt(r**2 + a**2*cos(theta)**2)\")\n",
     "Delta = expr(\"r**2 -2*r+a**2\")\n",
     "Sigma = expr(\"sqrt((r**2+a**2)**2 -a**2*Delta*sin(theta)**2)\")\n",
     "alpha = expr(\"rho*sqrt(Delta)/Sigma\")\n",
