--- a/notebooks/kerr_integration.ipynb
+++ b/notebooks/kerr_integration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,14 @@
     "d_r = expr(\"Delta/rho**2*p_r\")\n",
     "d_theta = expr(\"1/rho**2*p_theta\")\n",
     "\n",
-    "d_phi = expr(\"(R(b)+Delta*Theta(b))/(2*Delta*rho**2)\").diff(\"b\")\n",
+    "d_phi = -expr(\"(R(b)+Delta*Theta(b))/(2*Delta*rho**2)\").diff(\"b\")\n",
     "d_p_r     = sp.diff(expr(\"-Delta(r)/(2*rho(r)**2)*p_r**2-1/(2*rho(r)**2)*p_theta**2+((R+Delta(r)*Theta)/(2*Delta(r)*rho(r)**2))\"),\"r\")\n",
     "d_p_theta = sp.diff(expr(\"-Delta/(2*rho(theta)**2)*p_r**2-1/(2*rho(theta)**2)*p_theta**2+((R(theta)+Delta(theta)*Theta(theta))/(2*Delta*rho(theta)**2))\"),\"theta\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -401,8 +401,14 @@
     "            self._eval_partial(d_phi),\n",
     "            self._eval_partial(d_p_r),\n",
     "            self._eval_partial(d_p_theta),\n",
-    "        )\n",
+    "        )   \n",
+    "\n",
+    "        ex =     expr(\"((p_r**2*(-a**2 - r**2 + 2*r) - p_theta**2)*(a**2 + r**2 - 2*r)*sin(theta)**2 + (q*sin(theta)**2 + (a**2*sin(theta)**2 - b**2)*cos(theta)**2)*(a**2 + r**2 - 2*r) + (-(q + (a - b)**2)*(a**2 + r**2 - 2*r) + (a**2 - a*b + r**2)**2)*sin(theta)**2)/(2*(a**2*cos(theta)**2 + r**2)*(a**2 + r**2 - 2*r)*sin(theta)**2)\")\n",
+    "        \n",
     "    \n",
+    "        print(deltas, self.eval(ex)        )\n",
+    "\n",
+    "\n",
     "        self.r = (self.r + deltas[0]).evalf()\n",
     "        self.theta = (self.theta + deltas[1]).evalf()\n",
     "        self.phi = (self.phi + deltas[2]).evalf()\n",
@@ -468,9 +474,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.0204060383003680 3.04105330486687e-16\n"
+     ]
+    }
+   ],
    "source": [
     "# observer = Observer(4, sp.pi/2, 0, 0.999, 0.0, 0.0, 1.0)\n",
     "\n",
@@ -487,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -495,30 +509,25 @@
      "output_type": "stream",
      "text": [
       "0\n",
+      "-0.0201989503824878 0.0199996519724354\n",
       "1\n",
+      "-0.0200000240402281 0.0394040350945040\n",
       "2\n",
+      "-0.0198088652630450 0.0582322245328884\n",
       "3\n",
+      "-0.0196251069518490 0.0765022442645578\n",
       "4\n",
+      "-0.0194484066986254 0.0942311382880650\n",
       "5\n",
+      "-0.0192784447844777 0.111435035814580\n",
       "6\n",
+      "-0.0191149223714703 0.128129211033361\n",
       "7\n",
+      "-0.0189575598667712 0.144328137978939\n",
       "8\n",
+      "-0.0188060954402857 0.160045540968435\n",
       "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n"
+      "-0.0186602836792829 0.175294441025944\n"
      ]
     }
    ],
@@ -527,9 +536,9 @@
     "    [],[],[]\n",
     ")\n",
     "\n",
-    "for i in range(25):\n",
+    "for i in range(10):\n",
     "    print(i)\n",
-    "    ray.euler_step(0.1)\n",
+    "    ray.euler_step(-0.5)\n",
     "    _r=ray.r\n",
     "    _theta=ray.theta\n",
     "    _phi=ray.phi\n",
@@ -540,14 +549,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "([1.01969759619059, 1.02924972539307, 1.03860654400872, 1.04776981645858, 1.05674124124893, 1.06552245386469, 1.07411502947963, 1.08252048549728, 1.09074028393510, 1.09877583366350, 1.10662849251016, 1.11429956923927, 1.12179032541432, 1.12910197715263, 1.13623569677880, 1.14319261438397, 1.14997381929691, 1.15658036147276, 1.16301325280464, 1.16927346836288, 1.17536194756643, 1.18127959529040, 1.18702728291377, 1.19260584931051, 1.19801610178753], [-0.00206061951785578, -0.00308999590336989, -0.00411851250646007, -0.00514599890578314, -0.00617229039295985, -0.00719722761328407, -0.00822065623144841, -0.00924242662013355, -0.0102623935695193, -0.0112804160159627, -0.0122963567882557, -0.0133100823700237, -0.0143214626769589, -0.0153303708477015, -0.0163366830472886, -0.0173402782821868, -0.0183410382260075, -0.0193388470550864, -0.0203335912931727, -0.0213251596645399, -0.0223134429548866, -0.0232983338794441, -0.0242797269577579, -0.0252575183946496, -0.0262316059669040], [6.24385973532182e-17, 6.30236531036841e-17, 6.35968089949036e-17, 6.41581713860095e-17, 6.47078426823550e-17, 6.52459215070804e-17, 6.57725028619380e-17, 6.62876782781782e-17, 6.67915359582262e-17, 6.72841609088183e-17, 6.77656350662052e-17, 6.82360374139784e-17, 6.86954440940317e-17, 6.91439285111209e-17, 6.95815614314541e-17, 7.00084110757035e-17, 7.04245432068016e-17, 7.08300212128549e-17, 7.12249061854820e-17, 7.16092569938585e-17, 7.19831303547313e-17, 7.23465808986425e-17, 7.26996612325871e-17, 7.30424219993097e-17, 7.33749119334330e-17])\n"
+      "([1.01969759619059, 1.02924972539307, 1.03860654400872, 1.04776981645858, 1.05674124124893, 1.06552245386469, 1.07411502947963, 1.08252048549728, 1.09074028393510, 1.09877583366350], [0.00206061951785578, 0.00308999590336989, 0.00411851250646007, 0.00514599890578314, 0.00617229039295985, 0.00719722761328407, 0.00822065623144841, 0.00924242662013355, 0.0102623935695193, 0.0112804160159627], [6.24385973532182e-17, 6.30236531036841e-17, 6.35968089949036e-17, 6.41581713860095e-17, 6.47078426823550e-17, 6.52459215070804e-17, 6.57725028619380e-17, 6.62876782781782e-17, 6.67915359582262e-17, 6.72841609088183e-17])\n"
      ]
     }
    ],
@@ -557,16 +566,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fcdf2d28090>]"
+       "[<matplotlib.lines.Line2D at 0x7fce915ca810>]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     },
