--- a/notebooks/kerr_brute_force.ipynb
+++ b/notebooks/kerr_brute_force.ipynb
@@ -92,15 +92,6 @@
     "    \"P\": P, \"Delta\": Delta\n",
     "})),\"theta\").simplify()\n",
     "\n",
-    "display(d_r,d_theta,d_p_r,d_p_theta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "dr = sp.lambdify(sp.symbols(\"r theta phi p_r p_theta b a\"), d_r, cse=True, modules=[\"math\", \"mpmath\", \"sympy\"])\n",
     "dtheta = sp.lambdify(sp.symbols(\"r theta phi p_r p_theta b a\"), d_theta, cse=True, modules=[\"math\", \"mpmath\", \"sympy\"])\n",
     "dphi = sp.lambdify(sp.symbols(\"r theta phi p_r p_theta b a\"), d_phi, cse=True, modules=[\"math\", \"mpmath\", \"sympy\"])\n",
@@ -110,59 +101,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "let: f32 x0_0 = a**2;\n",
-      "let: f32 x0_1 = r**2;\n",
-      "let: f32 o0 = p_r*(-2*r + x0_0 + x0_1)/(x0_0*cos(theta)**2 + x0_1)\n",
+      "let x0_0 : f32 = a**2;\n",
+      "let x0_1 : f32 = r**2;\n",
+      "let o0 : f32 = p_r*(-2*r + x0_0 + x0_1)/(x0_0*cos(theta)**2 + x0_1)\n",
       "\n",
-      "let: f32 o1 = p_theta/(a**2*cos(theta)**2 + r**2)\n",
+      "let o1 : f32 = p_theta/(a**2*cos(theta)**2 + r**2)\n",
       "\n",
-      "let: f32 x2_0 = a**2;\n",
-      "let: f32 x2_1 = 2*r;\n",
-      "let: f32 x2_2 = r**2;\n",
-      "let: f32 x2_3 = cos(theta)**2;\n",
-      "let: f32 x2_4 = x2_0*x2_3;\n",
-      "let: f32 x2_5 = a*x2_1;\n",
-      "let: f32 o2 = (-b*x2_1 + b*x2_2 + b*x2_4 - x2_3*x2_5 + x2_5)/((x2_2 + x2_4)*(x2_0 - x2_1 + x2_2)*sin(theta)**2)\n",
+      "let x2_0 : f32 = a**2;\n",
+      "let x2_1 : f32 = 2*r;\n",
+      "let x2_2 : f32 = r**2;\n",
+      "let x2_3 : f32 = cos(theta)**2;\n",
+      "let x2_4 : f32 = x2_0*x2_3;\n",
+      "let x2_5 : f32 = a*x2_1;\n",
+      "let o2 : f32 = (-b*x2_1 + b*x2_2 + b*x2_4 - x2_3*x2_5 + x2_5)/((x2_2 + x2_4)*(x2_0 - x2_1 + x2_2)*sin(theta)**2)\n",
       "\n",
-      "let: f32 x3_0 = sin(theta)**2;\n",
-      "let: f32 x3_1 = 2*r;\n",
-      "let: f32 x3_2 = r**2;\n",
-      "let: f32 x3_3 = a**2;\n",
-      "let: f32 x3_4 = x3_2 + x3_3;\n",
-      "let: f32 x3_5 = -x3_1 + x3_4;\n",
-      "let: f32 x3_6 = x3_5**2;\n",
-      "let: f32 x3_7 = cos(theta)**2;\n",
-      "let: f32 x3_8 = x3_2 + x3_3*x3_7;\n",
-      "let: f32 x3_9 = p_r**2;\n",
-      "let: f32 x3_10 = x3_0*x3_6;\n",
-      "let: f32 x3_11 = r - 1;\n",
-      "let: f32 x3_12 = -x3_11*x3_8;\n",
-      "let: f32 x3_13 = q*x3_0 + x3_7*(-b**2 + x3_0*x3_3);\n",
-      "let: f32 x3_14 = -a*b + x3_4;\n",
-      "let: f32 x3_15 = q + (a - b)**2;\n",
-      "let: f32 x3_16 = x3_0*(x3_14**2 - x3_15*x3_5) + x3_13*x3_5;\n",
-      "let: f32 o3 = (r*x3_10*(p_theta**2 + x3_5*x3_9) - r*x3_16*x3_5 + x3_10*x3_12*x3_9 + x3_12*x3_16 + x3_5*x3_8*(x3_0*(x3_1*x3_14 - x3_11*x3_15) + x3_11*x3_13))/(x3_0*x3_6*x3_8**2)\n",
+      "let x3_0 : f32 = sin(theta)**2;\n",
+      "let x3_1 : f32 = 2*r;\n",
+      "let x3_2 : f32 = r**2;\n",
+      "let x3_3 : f32 = a**2;\n",
+      "let x3_4 : f32 = x3_2 + x3_3;\n",
+      "let x3_5 : f32 = -x3_1 + x3_4;\n",
+      "let x3_6 : f32 = x3_5**2;\n",
+      "let x3_7 : f32 = cos(theta)**2;\n",
+      "let x3_8 : f32 = x3_2 + x3_3*x3_7;\n",
+      "let x3_9 : f32 = p_r**2;\n",
+      "let x3_10 : f32 = x3_0*x3_6;\n",
+      "let x3_11 : f32 = r - 1;\n",
+      "let x3_12 : f32 = -x3_11*x3_8;\n",
+      "let x3_13 : f32 = q*x3_0 + x3_7*(-b**2 + x3_0*x3_3);\n",
+      "let x3_14 : f32 = -a*b + x3_4;\n",
+      "let x3_15 : f32 = q + (a - b)**2;\n",
+      "let x3_16 : f32 = x3_0*(x3_14**2 - x3_15*x3_5) + x3_13*x3_5;\n",
+      "let o3 : f32 = (r*x3_10*(p_theta**2 + x3_5*x3_9) - r*x3_16*x3_5 + x3_10*x3_12*x3_9 + x3_12*x3_16 + x3_5*x3_8*(x3_0*(x3_1*x3_14 - x3_11*x3_15) + x3_11*x3_13))/(x3_0*x3_6*x3_8**2)\n",
       "\n",
-      "let: f32 x4_0 = cos(theta);\n",
-      "let: f32 x4_1 = sin(theta);\n",
-      "let: f32 x4_2 = r**2;\n",
-      "let: f32 x4_3 = a**2;\n",
-      "let: f32 x4_4 = x4_2 + x4_3;\n",
-      "let: f32 x4_5 = -2*r + x4_4;\n",
-      "let: f32 x4_6 = x4_0**2;\n",
-      "let: f32 x4_7 = x4_2 + x4_3*x4_6;\n",
-      "let: f32 x4_8 = -b**2;\n",
-      "let: f32 x4_9 = x4_1**4*x4_3;\n",
-      "let: f32 x4_10 = x4_1**2;\n",
-      "let: f32 x4_11 = x4_10*x4_3;\n",
-      "let: f32 o4 = x4_0*(x4_11*(x4_10*(-x4_5*(q + (a - b)**2) + (-a*b + x4_4)**2) + x4_5*(q*x4_10 + x4_6*(x4_11 + x4_8))) + x4_5*x4_7*(-x4_8 - x4_9) + x4_5*x4_9*(-p_r**2*x4_5 - p_theta**2))/(x4_1**3*x4_5*x4_7**2)\n",
+      "let x4_0 : f32 = cos(theta);\n",
+      "let x4_1 : f32 = sin(theta);\n",
+      "let x4_2 : f32 = r**2;\n",
+      "let x4_3 : f32 = a**2;\n",
+      "let x4_4 : f32 = x4_2 + x4_3;\n",
+      "let x4_5 : f32 = -2*r + x4_4;\n",
+      "let x4_6 : f32 = x4_0**2;\n",
+      "let x4_7 : f32 = x4_2 + x4_3*x4_6;\n",
+      "let x4_8 : f32 = -b**2;\n",
+      "let x4_9 : f32 = x4_1**4*x4_3;\n",
+      "let x4_10 : f32 = x4_1**2;\n",
+      "let x4_11 : f32 = x4_10*x4_3;\n",
+      "let o4 : f32 = x4_0*(x4_11*(x4_10*(-x4_5*(q + (a - b)**2) + (-a*b + x4_4)**2) + x4_5*(q*x4_10 + x4_6*(x4_11 + x4_8))) + x4_5*x4_7*(-x4_8 - x4_9) + x4_5*x4_9*(-p_r**2*x4_5 - p_theta**2))/(x4_1**3*x4_5*x4_7**2)\n",
       "\n"
      ]
     }
