WORKING KER BLACK HOLE!

--- a/notebooks/kerr_brute_force.ipynb
+++ b/notebooks/kerr_brute_force.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,42 @@
     "from sympy.parsing.sympy_parser import parse_expr as expr\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = 'all'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[sin(theta)*cos(phi), sin(phi)*sin(theta), cos(theta)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#coordinates transformmations\n",
+    "\n",
+    "\n",
+    "x = expr(\"r*sin(theta)*cos(phi)\")\n",
+    "y = expr(\"r*sin(theta)*sin(phi)\")\n",
+    "z = expr(\"r*cos(theta)\")\n",
+    "\n",
+    "\n",
+    "[\n",
+    "    x.diff(\"r\"), y.diff('r'), z.diff('r'),\n",
+    "]\n",
+    "[\n",
+    "    x.diff(\"theta\"), y.diff('theta'), z.diff('theta'),\n",
+    "]\n",
+    "[\n",
+    "    x.diff(\"phi\"), y.diff('phi'), z.diff('phi'),\n",
+    "]\n"
    ]
   },
   {
