--- a/notebooks/kerr_code_gen.ipynb
+++ b/notebooks/kerr_code_gen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,27 @@
        "[sin(theta)*cos(phi), sin(phi)*sin(theta), cos(theta)]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[r*cos(phi)*cos(theta), r*sin(phi)*cos(theta), -r*sin(theta)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[-r*sin(phi)*sin(theta), r*sin(theta)*cos(phi), 0]"
+      ]
+     },
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,58 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{p_{r} \\left(a^{2} + r^{2} - 2 r\\right)}{a^{2} \\cos^{2}{\\left(\\theta \\right)} + r^{2}}$"
-      ],
-      "text/plain": [
-       "p_r*(a**2 + r**2 - 2*r)/(a**2*cos(theta)**2 + r**2)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{p_{\\theta}}{a^{2} \\cos^{2}{\\left(\\theta \\right)} + r^{2}}$"
-      ],
-      "text/plain": [
-       "p_theta/(a**2*cos(theta)**2 + r**2)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{p_{r}^{2} \\cdot \\left(1 - r\\right) \\left(a^{2} \\cos^{2}{\\left(\\theta \\right)} + r^{2}\\right) \\left(a^{2} + r^{2} - 2 r\\right)^{2} \\sin^{2}{\\left(\\theta \\right)} + r \\left(p_{r}^{2} \\left(a^{2} + r^{2} - 2 r\\right) + p_{\\theta}^{2}\\right) \\left(a^{2} + r^{2} - 2 r\\right)^{2} \\sin^{2}{\\left(\\theta \\right)} - r \\left(\\left(q \\sin^{2}{\\left(\\theta \\right)} + \\left(a^{2} \\sin^{2}{\\left(\\theta \\right)} - b^{2}\\right) \\cos^{2}{\\left(\\theta \\right)}\\right) \\left(a^{2} + r^{2} - 2 r\\right) + \\left(- \\left(q + \\left(a - b\\right)^{2}\\right) \\left(a^{2} + r^{2} - 2 r\\right) + \\left(a^{2} - a b + r^{2}\\right)^{2}\\right) \\sin^{2}{\\left(\\theta \\right)}\\right) \\left(a^{2} + r^{2} - 2 r\\right) + \\left(1 - r\\right) \\left(a^{2} \\cos^{2}{\\left(\\theta \\right)} + r^{2}\\right) \\left(\\left(q \\sin^{2}{\\left(\\theta \\right)} + \\left(a^{2} \\sin^{2}{\\left(\\theta \\right)} - b^{2}\\right) \\cos^{2}{\\left(\\theta \\right)}\\right) \\left(a^{2} + r^{2} - 2 r\\right) + \\left(- \\left(q + \\left(a - b\\right)^{2}\\right) \\left(a^{2} + r^{2} - 2 r\\right) + \\left(a^{2} - a b + r^{2}\\right)^{2}\\right) \\sin^{2}{\\left(\\theta \\right)}\\right) + \\left(a^{2} \\cos^{2}{\\left(\\theta \\right)} + r^{2}\\right) \\left(\\left(r - 1\\right) \\left(q \\sin^{2}{\\left(\\theta \\right)} + \\left(a^{2} \\sin^{2}{\\left(\\theta \\right)} - b^{2}\\right) \\cos^{2}{\\left(\\theta \\right)}\\right) + \\left(2 r \\left(a^{2} - a b + r^{2}\\right) - \\left(q + \\left(a - b\\right)^{2}\\right) \\left(r - 1\\right)\\right) \\sin^{2}{\\left(\\theta \\right)}\\right) \\left(a^{2} + r^{2} - 2 r\\right)}{\\left(a^{2} \\cos^{2}{\\left(\\theta \\right)} + r^{2}\\right)^{2} \\left(a^{2} + r^{2} - 2 r\\right)^{2} \\sin^{2}{\\left(\\theta \\right)}}$"
-      ],
-      "text/plain": [
-       "(p_r**2*(1 - r)*(a**2*cos(theta)**2 + r**2)*(a**2 + r**2 - 2*r)**2*sin(theta)**2 + r*(p_r**2*(a**2 + r**2 - 2*r) + p_theta**2)*(a**2 + r**2 - 2*r)**2*sin(theta)**2 - r*((q*sin(theta)**2 + (a**2*sin(theta)**2 - b**2)*cos(theta)**2)*(a**2 + r**2 - 2*r) + (-(q + (a - b)**2)*(a**2 + r**2 - 2*r) + (a**2 - a*b + r**2)**2)*sin(theta)**2)*(a**2 + r**2 - 2*r) + (1 - r)*(a**2*cos(theta)**2 + r**2)*((q*sin(theta)**2 + (a**2*sin(theta)**2 - b**2)*cos(theta)**2)*(a**2 + r**2 - 2*r) + (-(q + (a - b)**2)*(a**2 + r**2 - 2*r) + (a**2 - a*b + r**2)**2)*sin(theta)**2) + (a**2*cos(theta)**2 + r**2)*((r - 1)*(q*sin(theta)**2 + (a**2*sin(theta)**2 - b**2)*cos(theta)**2) + (2*r*(a**2 - a*b + r**2) - (q + (a - b)**2)*(r - 1))*sin(theta)**2)*(a**2 + r**2 - 2*r))/((a**2*cos(theta)**2 + r**2)**2*(a**2 + r**2 - 2*r)**2*sin(theta)**2)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{\\left(a^{2} \\left(p_{r}^{2} \\left(- a^{2} - r^{2} + 2 r\\right) - p_{\\theta}^{2}\\right) \\left(a^{2} + r^{2} - 2 r\\right) \\sin^{4}{\\left(\\theta \\right)} + a^{2} \\left(\\left(q \\sin^{2}{\\left(\\theta \\right)} + \\left(a^{2} \\sin^{2}{\\left(\\theta \\right)} - b^{2}\\right) \\cos^{2}{\\left(\\theta \\right)}\\right) \\left(a^{2} + r^{2} - 2 r\\right) + \\left(- \\left(q + \\left(a - b\\right)^{2}\\right) \\left(a^{2} + r^{2} - 2 r\\right) + \\left(a^{2} - a b + r^{2}\\right)^{2}\\right) \\sin^{2}{\\left(\\theta \\right)}\\right) \\sin^{2}{\\left(\\theta \\right)} + \\left(- a^{2} \\sin^{4}{\\left(\\theta \\right)} + b^{2}\\right) \\left(a^{2} \\cos^{2}{\\left(\\theta \\right)} + r^{2}\\right) \\left(a^{2} + r^{2} - 2 r\\right)\\right) \\cos{\\left(\\theta \\right)}}{\\left(a^{2} \\cos^{2}{\\left(\\theta \\right)} + r^{2}\\right)^{2} \\left(a^{2} + r^{2} - 2 r\\right) \\sin^{3}{\\left(\\theta \\right)}}$"
-      ],
-      "text/plain": [
-       "(a**2*(p_r**2*(-a**2 - r**2 + 2*r) - p_theta**2)*(a**2 + r**2 - 2*r)*sin(theta)**4 + a**2*((q*sin(theta)**2 + (a**2*sin(theta)**2 - b**2)*cos(theta)**2)*(a**2 + r**2 - 2*r) + (-(q + (a - b)**2)*(a**2 + r**2 - 2*r) + (a**2 - a*b + r**2)**2)*sin(theta)**2)*sin(theta)**2 + (-a**2*sin(theta)**4 + b**2)*(a**2*cos(theta)**2 + r**2)*(a**2 + r**2 - 2*r))*cos(theta)/((a**2*cos(theta)**2 + r**2)**2*(a**2 + r**2 - 2*r)*sin(theta)**3)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rho = expr(\"sqrt(r**2 + a**2*cos(theta)**2)\")\n",
     "Delta = expr(\"r**2 -2*r+a**2\")\n",
@@ -137,86 +108,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{p_{r} \\left(a^{2} + r^{2} - 2 r\\right)}{a^{2} \\cos^{2}{\\left(\\theta \\right)} + r^{2}}$"
+      ],
+      "text/plain": [
+       "p_r*(a**2 + r**2 - 2*r)/(a**2*cos(theta)**2 + r**2)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[\n",
+    "    d_r,\n",
+    "    d_theta,\n",
+    "    d_phi,\n",
+    "    d_p_r,\n",
+    "    d_p_theta\n",
+    "][0]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "let x0_0 : f32 = a**2;\n",
-      "let x0_1 : f32 = r**2;\n",
-      "let o0 : f32 = p_r*(-2*r + x0_0 + x0_1)/(x0_0*cos(theta)**2 + x0_1)\n",
+      "let x0 : f32 = 2*r;\n",
+      "let x1 : f32 = pow(r, 2.0);\n",
+      "let x2 : f32 = pow(a, 2.0);\n",
+      "let x3 : f32 = x1 + x2;\n",
+      "let x4 : f32 = -x0 + x3;\n",
+      "let x5 : f32 = cos(theta);\n",
+      "let x6 : f32 = pow(x5, 2.0);\n",
+      "let x7 : f32 = x2*x6;\n",
+      "let x8 : f32 = x1 + x7;\n",
+      "let x9 : f32 = 1.0/x8;\n",
+      "let x10 : f32 = sin(theta);\n",
+      "let x11 : f32 = pow(x10, 2.0);\n",
+      "let x12 : f32 = 1.0/x11;\n",
+      "let x13 : f32 = 1.0/x4;\n",
+      "let x14 : f32 = a*x0;\n",
+      "let x15 : f32 = pow(x4, 2.0);\n",
+      "let x16 : f32 = pow(x8, -2.0);\n",
+      "let x17 : f32 = pow(p_theta, 2.0);\n",
+      "let x18 : f32 = pow(p_r, 2.0);\n",
+      "let x19 : f32 = x11*x15;\n",
+      "let x20 : f32 = r - 1;\n",
+      "let x21 : f32 = -x20*x8;\n",
+      "let x22 : f32 = -pow(b, 2.0);\n",
+      "let x23 : f32 = x11*x2;\n",
+      "let x24 : f32 = q*x11 + x6*(x22 + x23);\n",
+      "let x25 : f32 = -a*b + x3;\n",
+      "let x26 : f32 = q + pow(a - b, 2.0);\n",
+      "let x27 : f32 = x4*x8;\n",
+      "let x28 : f32 = x11*(pow(x25, 2.0) - x26*x4) + x24*x4;\n",
+      "let x29 : f32 = pow(x10, 4.0)*x2;\n",
       "\n",
-      "let o1 : f32 = p_theta/(a**2*cos(theta)**2 + r**2)\n",
-      "\n",
-      "let x2_0 : f32 = a**2;\n",
-      "let x2_1 : f32 = 2*r;\n",
-      "let x2_2 : f32 = r**2;\n",
-      "let x2_3 : f32 = cos(theta)**2;\n",
-      "let x2_4 : f32 = x2_0*x2_3;\n",
-      "let x2_5 : f32 = a*x2_1;\n",
-      "let o2 : f32 = (-b*x2_1 + b*x2_2 + b*x2_4 - x2_3*x2_5 + x2_5)/((x2_2 + x2_4)*(x2_0 - x2_1 + x2_2)*sin(theta)**2)\n",
-      "\n",
-      "let x3_0 : f32 = sin(theta)**2;\n",
-      "let x3_1 : f32 = 2*r;\n",
-      "let x3_2 : f32 = r**2;\n",
-      "let x3_3 : f32 = a**2;\n",
-      "let x3_4 : f32 = x3_2 + x3_3;\n",
-      "let x3_5 : f32 = -x3_1 + x3_4;\n",
-      "let x3_6 : f32 = x3_5**2;\n",
-      "let x3_7 : f32 = cos(theta)**2;\n",
-      "let x3_8 : f32 = x3_2 + x3_3*x3_7;\n",
-      "let x3_9 : f32 = p_r**2;\n",
-      "let x3_10 : f32 = x3_0*x3_6;\n",
-      "let x3_11 : f32 = r - 1;\n",
-      "let x3_12 : f32 = -x3_11*x3_8;\n",
-      "let x3_13 : f32 = q*x3_0 + x3_7*(-b**2 + x3_0*x3_3);\n",
-      "let x3_14 : f32 = -a*b + x3_4;\n",
-      "let x3_15 : f32 = q + (a - b)**2;\n",
-      "let x3_16 : f32 = x3_0*(x3_14**2 - x3_15*x3_5) + x3_13*x3_5;\n",
-      "let o3 : f32 = (r*x3_10*(p_theta**2 + x3_5*x3_9) - r*x3_16*x3_5 + x3_10*x3_12*x3_9 + x3_12*x3_16 + x3_5*x3_8*(x3_0*(x3_1*x3_14 - x3_11*x3_15) + x3_11*x3_13))/(x3_0*x3_6*x3_8**2)\n",
-      "\n",
-      "let x4_0 : f32 = cos(theta);\n",
-      "let x4_1 : f32 = sin(theta);\n",
-      "let x4_2 : f32 = r**2;\n",
-      "let x4_3 : f32 = a**2;\n",
-      "let x4_4 : f32 = x4_2 + x4_3;\n",
-      "let x4_5 : f32 = -2*r + x4_4;\n",
-      "let x4_6 : f32 = x4_0**2;\n",
-      "let x4_7 : f32 = x4_2 + x4_3*x4_6;\n",
-      "let x4_8 : f32 = -b**2;\n",
-      "let x4_9 : f32 = x4_1**4*x4_3;\n",
-      "let x4_10 : f32 = x4_1**2;\n",
-      "let x4_11 : f32 = x4_10*x4_3;\n",
-      "let o4 : f32 = x4_0*(x4_11*(x4_10*(-x4_5*(q + (a - b)**2) + (-a*b + x4_4)**2) + x4_5*(q*x4_10 + x4_6*(x4_11 + x4_8))) + x4_5*x4_7*(-x4_8 - x4_9) + x4_5*x4_9*(-p_r**2*x4_5 - p_theta**2))/(x4_1**3*x4_5*x4_7**2)\n",
-      "\n"
+      "p_r*x4*x9\n",
+      "p_theta*x9\n",
+      "x12*x13*x9*(-b*x0 + b*x1 + b*x7 - x14*x6 + x14)\n",
+      "x12*x16*(r*x19*(x17 + x18*x4) - r*x28*x4 + x18*x19*x21 + x21*x28 + x27*(x11*(x0*x25 - x20*x26) + x20*x24))/x15\n",
+      "x13*x16*x5*(x23*x28 + x27*(-x22 - x29) + x29*x4*(-x17 - x18*x4))/pow(x10, 3.0)\n"
      ]
     }
    ],
    "source": [
-    "cse = [\n",
-    "    sp.cse(d_r),\n",
-    "    sp.cse(d_theta),\n",
-    "    sp.cse(d_phi),\n",
-    "    sp.cse(d_p_r),\n",
-    "    sp.cse(d_p_theta),\n",
-    "]\n",
-    "for i, equation in enumerate(cse):\n",
-    "    for v, d in equation[0]:\n",
-    "        v = str(v).replace(\"x\", f\"x{i}_\")\n",
-    "        d = str(d).replace(\"x\", f\"x{i}_\")\n",
-    "        \n",
-    "        print(f\"let {v} : f32 = {d};\") \n",
-    "    d = str(equation[1][0]).replace(\"x\", f\"x{i}_\")\n",
-    "    print(f\"let o{i} : f32 = {d}\\n\")"
+    "# cse = [\n",
+    "#     sp.cse(d_r),\n",
+    "#     sp.cse(d_theta),\n",
+    "#     sp.cse(d_phi),\n",
+    "#     sp.cse(d_p_r),\n",
+    "#     sp.cse(d_p_theta),\n",
+    "# ]\n",
+    "cse= sp.cse([\n",
+    "    d_r,\n",
+    "    d_theta,\n",
+    "    d_phi,\n",
+    "    d_p_r,\n",
+    "    d_p_theta\n",
+    "])\n",
+    "\n",
+    "\n",
+    "for v, d in cse[0]:\n",
+    "    # v = str(v).replace(\"x\", f\"x{i}_\")\n",
+    "    # d = str(d).replace(\"x\", f\"x{i}_\")\n",
+    "    \n",
+    "    print(f\"let {v} : f32 = {sp.glsl_code(d)};\") \n",
+    "print()\n",
+    "for d in cse[1]:\n",
+    "    print(sp.glsl_code(d))\n",
+    "    # d = str(cse[1][0]).replace(\"x\", f\"x{i}_\")\n",
+    "    # print(f\"let o{i} : f32 = {d}\\n\")"
    ]
   },
   {
