added frame time

--- a/notebooks/kerr_code_gen.ipynb
+++ b/notebooks/kerr_code_gen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "[sin(theta)*cos(phi), sin(phi)*sin(theta), cos(theta)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -33,7 +33,7 @@
        "[r*cos(phi)*cos(theta), r*sin(phi)*cos(theta), -r*sin(theta)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -43,7 +43,7 @@
        "[-r*sin(phi)*sin(theta), r*sin(theta)*cos(phi), 0]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,6 @@
     "alpha = expr(\"rho*sqrt(Delta)/Sigma\")\n",
     "omega = expr(\"2* a*r/Sigma**2\")\n",
     "omega_bar = expr(\"Sigma*sin(theta)/rho\")\n",
-    "\n",
     "P = expr(\"r**2 + a**2 - a*b\")\n",
     "R = expr(\"P**2 - Delta*((b-a)**2+q)\")\n",
     "Theta = expr(\"q-cos(theta)**2* (b**2/sin(theta)**2-a**2)\")\n",
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -120,19 +119,76 @@
        "p_r*(a**2 + r**2 - 2*r)/(a**2*cos(theta)**2 + r**2)"
       ]
      },
-     "execution_count": 23,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{p_{\\theta}}{a^{2} \\cos^{2}{\\left(\\theta \\right)} + r^{2}}$"
+      ],
+      "text/plain": [
+       "p_theta/(a**2*cos(theta)**2 + r**2)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{a^{2} b \\cos^{2}{\\left(\\theta \\right)} - 2 a r \\cos^{2}{\\left(\\theta \\right)} + 2 a r + b r^{2} - 2 b r}{\\left(a^{2} \\cos^{2}{\\left(\\theta \\right)} + r^{2}\\right) \\left(a^{2} + r^{2} - 2 r\\right) \\sin^{2}{\\left(\\theta \\right)}}$"
+      ],
+      "text/plain": [
+       "(a**2*b*cos(theta)**2 - 2*a*r*cos(theta)**2 + 2*a*r + b*r**2 - 2*b*r)/((a**2*cos(theta)**2 + r**2)*(a**2 + r**2 - 2*r)*sin(theta)**2)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{p_{r}^{2} \\cdot \\left(1 - r\\right) \\left(a^{2} \\cos^{2}{\\left(\\theta \\right)} + r^{2}\\right) \\left(a^{2} + r^{2} - 2 r\\right)^{2} \\sin^{2}{\\left(\\theta \\right)} + r \\left(p_{r}^{2} \\left(a^{2} + r^{2} - 2 r\\right) + p_{\\theta}^{2}\\right) \\left(a^{2} + r^{2} - 2 r\\right)^{2} \\sin^{2}{\\left(\\theta \\right)} - r \\left(\\left(q \\sin^{2}{\\left(\\theta \\right)} + \\left(a^{2} \\sin^{2}{\\left(\\theta \\right)} - b^{2}\\right) \\cos^{2}{\\left(\\theta \\right)}\\right) \\left(a^{2} + r^{2} - 2 r\\right) + \\left(- \\left(q + \\left(a - b\\right)^{2}\\right) \\left(a^{2} + r^{2} - 2 r\\right) + \\left(a^{2} - a b + r^{2}\\right)^{2}\\right) \\sin^{2}{\\left(\\theta \\right)}\\right) \\left(a^{2} + r^{2} - 2 r\\right) + \\left(1 - r\\right) \\left(a^{2} \\cos^{2}{\\left(\\theta \\right)} + r^{2}\\right) \\left(\\left(q \\sin^{2}{\\left(\\theta \\right)} + \\left(a^{2} \\sin^{2}{\\left(\\theta \\right)} - b^{2}\\right) \\cos^{2}{\\left(\\theta \\right)}\\right) \\left(a^{2} + r^{2} - 2 r\\right) + \\left(- \\left(q + \\left(a - b\\right)^{2}\\right) \\left(a^{2} + r^{2} - 2 r\\right) + \\left(a^{2} - a b + r^{2}\\right)^{2}\\right) \\sin^{2}{\\left(\\theta \\right)}\\right) + \\left(a^{2} \\cos^{2}{\\left(\\theta \\right)} + r^{2}\\right) \\left(\\left(r - 1\\right) \\left(q \\sin^{2}{\\left(\\theta \\right)} + \\left(a^{2} \\sin^{2}{\\left(\\theta \\right)} - b^{2}\\right) \\cos^{2}{\\left(\\theta \\right)}\\right) + \\left(2 r \\left(a^{2} - a b + r^{2}\\right) - \\left(q + \\left(a - b\\right)^{2}\\right) \\left(r - 1\\right)\\right) \\sin^{2}{\\left(\\theta \\right)}\\right) \\left(a^{2} + r^{2} - 2 r\\right)}{\\left(a^{2} \\cos^{2}{\\left(\\theta \\right)} + r^{2}\\right)^{2} \\left(a^{2} + r^{2} - 2 r\\right)^{2} \\sin^{2}{\\left(\\theta \\right)}}$"
+      ],
+      "text/plain": [
+       "(p_r**2*(1 - r)*(a**2*cos(theta)**2 + r**2)*(a**2 + r**2 - 2*r)**2*sin(theta)**2 + r*(p_r**2*(a**2 + r**2 - 2*r) + p_theta**2)*(a**2 + r**2 - 2*r)**2*sin(theta)**2 - r*((q*sin(theta)**2 + (a**2*sin(theta)**2 - b**2)*cos(theta)**2)*(a**2 + r**2 - 2*r) + (-(q + (a - b)**2)*(a**2 + r**2 - 2*r) + (a**2 - a*b + r**2)**2)*sin(theta)**2)*(a**2 + r**2 - 2*r) + (1 - r)*(a**2*cos(theta)**2 + r**2)*((q*sin(theta)**2 + (a**2*sin(theta)**2 - b**2)*cos(theta)**2)*(a**2 + r**2 - 2*r) + (-(q + (a - b)**2)*(a**2 + r**2 - 2*r) + (a**2 - a*b + r**2)**2)*sin(theta)**2) + (a**2*cos(theta)**2 + r**2)*((r - 1)*(q*sin(theta)**2 + (a**2*sin(theta)**2 - b**2)*cos(theta)**2) + (2*r*(a**2 - a*b + r**2) - (q + (a - b)**2)*(r - 1))*sin(theta)**2)*(a**2 + r**2 - 2*r))/((a**2*cos(theta)**2 + r**2)**2*(a**2 + r**2 - 2*r)**2*sin(theta)**2)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{\\left(a^{2} \\left(p_{r}^{2} \\left(- a^{2} - r^{2} + 2 r\\right) - p_{\\theta}^{2}\\right) \\left(a^{2} + r^{2} - 2 r\\right) \\sin^{4}{\\left(\\theta \\right)} + a^{2} \\left(\\left(q \\sin^{2}{\\left(\\theta \\right)} + \\left(a^{2} \\sin^{2}{\\left(\\theta \\right)} - b^{2}\\right) \\cos^{2}{\\left(\\theta \\right)}\\right) \\left(a^{2} + r^{2} - 2 r\\right) + \\left(- \\left(q + \\left(a - b\\right)^{2}\\right) \\left(a^{2} + r^{2} - 2 r\\right) + \\left(a^{2} - a b + r^{2}\\right)^{2}\\right) \\sin^{2}{\\left(\\theta \\right)}\\right) \\sin^{2}{\\left(\\theta \\right)} + \\left(- a^{2} \\sin^{4}{\\left(\\theta \\right)} + b^{2}\\right) \\left(a^{2} \\cos^{2}{\\left(\\theta \\right)} + r^{2}\\right) \\left(a^{2} + r^{2} - 2 r\\right)\\right) \\cos{\\left(\\theta \\right)}}{\\left(a^{2} \\cos^{2}{\\left(\\theta \\right)} + r^{2}\\right)^{2} \\left(a^{2} + r^{2} - 2 r\\right) \\sin^{3}{\\left(\\theta \\right)}}$"
+      ],
+      "text/plain": [
+       "(a**2*(p_r**2*(-a**2 - r**2 + 2*r) - p_theta**2)*(a**2 + r**2 - 2*r)*sin(theta)**4 + a**2*((q*sin(theta)**2 + (a**2*sin(theta)**2 - b**2)*cos(theta)**2)*(a**2 + r**2 - 2*r) + (-(q + (a - b)**2)*(a**2 + r**2 - 2*r) + (a**2 - a*b + r**2)**2)*sin(theta)**2)*sin(theta)**2 + (-a**2*sin(theta)**4 + b**2)*(a**2*cos(theta)**2 + r**2)*(a**2 + r**2 - 2*r))*cos(theta)/((a**2*cos(theta)**2 + r**2)**2*(a**2 + r**2 - 2*r)*sin(theta)**3)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "[\n",
+    "for i in [\n",
     "    d_r,\n",
     "    d_theta,\n",
     "    d_phi,\n",
     "    d_p_r,\n",
-    "    d_p_theta\n",
-    "][0]"
+    "    d_p_theta,\n",
+    "    rho,\n",
+    "Delta,\n",
+    "Sigma,\n",
+    "alpha,\n",
+    "omega,\n",
+    "omega_bar,\n",
+    "P,\n",
+    "R,\n",
+    "Theta,\n",
+    "]:\n",
+    "    display(i)"
    ]
   },
   {
